// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interactions page works as expected matches initial snapshot 1`] = `
<DocumentFragment>
  <div>
    <div>
      <h3>
        search for high severity interactions with a single drug, or get all interactions between multiple drugs.
      </h3>
      <form
        class=""
      >
        <label
          class="form-label"
          for="drugName"
        >
          search interactions:
        </label>
        <input
          class="form-control"
          name="drugName"
          placeholder="drug name(s)"
          value="adderall"
        />
        <br />
        <div
          class="form-group"
        >
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="formBasicCheckbox"
              name="saveBool"
              type="checkbox"
              value="false"
            />
            <label
              class="form-check-label"
              for="formBasicCheckbox"
              title=""
            >
              add searched drugs to saved list
            </label>
          </div>
        </div>
        <small
          class="form-text text-muted"
          id="searchHelpBlock"
        >
          please separate multiple drug names by commas
        </small>
        <br />
        <button
          class="btn btn-lg btn-dark btn btn-primary"
          type="submit"
        >
          search
        </button>
        <p
          id="error-holder"
        />
      </form>
      <br />
    </div>
    <p
      id="error-holder"
    />
    <p>
      sorry, no results were found
    </p>
  </div>
</DocumentFragment>
`;

exports[`interactions page works as expected matches snapshot interactions found 1`] = `
<DocumentFragment>
  <div>
    <div>
      <h3>
        search for high severity interactions with a single drug, or get all interactions between multiple drugs.
      </h3>
      <form
        class=""
      >
        <label
          class="form-label"
          for="drugName"
        >
          search interactions:
        </label>
        <input
          class="form-control"
          name="drugName"
          placeholder="drug name(s)"
          value="adderall"
        />
        <br />
        <div
          class="form-group"
        >
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="formBasicCheckbox"
              name="saveBool"
              type="checkbox"
              value="false"
            />
            <label
              class="form-check-label"
              for="formBasicCheckbox"
              title=""
            >
              add searched drugs to saved list
            </label>
          </div>
        </div>
        <small
          class="form-text text-muted"
          id="searchHelpBlock"
        >
          please separate multiple drug names by commas
        </small>
        <br />
        <button
          class="btn btn-lg btn-dark btn btn-primary"
          type="submit"
        >
          search
        </button>
        <p
          id="error-holder"
        />
      </form>
      <br />
    </div>
    <p
      id="error-holder"
    />
    <div>
      <div
        class="table-responsive"
      >
        <table
          class="table table-striped table-bordered table-hover"
        >
          <thead>
            <tr>
              <th>
                drug 1
              </th>
              <th>
                drug 2
              </th>
              <th>
                description
              </th>
              <th>
                severity
              </th>
              <th>
                comment
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                drug1test
              </td>
              <td>
                drug2test
              </td>
              <td>
                test description
              </td>
              <td>
                high
              </td>
              <td>
                test drug is resolved to test drug
              </td>
            </tr>
            <tr>
              <td>
                drug1test2
              </td>
              <td>
                drug2test2
              </td>
              <td>
                test description
              </td>
              <td>
                N/A
              </td>
              <td>
                test drug is resolved to test drug
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`interactions page works as expected matches snapshot no interactions found 1`] = `
<DocumentFragment>
  <div>
    <div>
      <h3>
        search for high severity interactions with a single drug, or get all interactions between multiple drugs.
      </h3>
      <form
        class=""
      >
        <label
          class="form-label"
          for="drugName"
        >
          search interactions:
        </label>
        <input
          class="form-control"
          name="drugName"
          placeholder="drug name(s)"
          value="hello"
        />
        <br />
        <div
          class="form-group"
        >
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="formBasicCheckbox"
              name="saveBool"
              type="checkbox"
              value="false"
            />
            <label
              class="form-check-label"
              for="formBasicCheckbox"
              title=""
            >
              add searched drugs to saved list
            </label>
          </div>
        </div>
        <small
          class="form-text text-muted"
          id="searchHelpBlock"
        >
          please separate multiple drug names by commas
        </small>
        <br />
        <button
          class="btn btn-lg btn-dark btn btn-primary"
          type="submit"
        >
          search
        </button>
        <p
          id="error-holder"
        />
      </form>
      <br />
    </div>
    <p
      id="error-holder"
    />
    <p>
      sorry, no results were found
    </p>
  </div>
</DocumentFragment>
`;

exports[`interactions page works as expected matches snapshot when loading 1`] = `
<DocumentFragment>
  <div>
    <div>
      <h3>
        search for high severity interactions with a single drug, or get all interactions between multiple drugs.
      </h3>
      <form
        class=""
      >
        <label
          class="form-label"
          for="drugName"
        >
          search interactions:
        </label>
        <input
          class="form-control"
          name="drugName"
          placeholder="drug name(s)"
          value="adderall"
        />
        <br />
        <div
          class="form-group"
        >
          <div
            class="form-check"
          >
            <input
              class="form-check-input"
              id="formBasicCheckbox"
              name="saveBool"
              type="checkbox"
              value="false"
            />
            <label
              class="form-check-label"
              for="formBasicCheckbox"
              title=""
            >
              add searched drugs to saved list
            </label>
          </div>
        </div>
        <small
          class="form-text text-muted"
          id="searchHelpBlock"
        >
          please separate multiple drug names by commas
        </small>
        <br />
        <button
          class="btn btn-lg btn-dark btn btn-primary"
          type="submit"
        >
          search
        </button>
        <p
          id="error-holder"
        />
      </form>
      <br />
    </div>
    <div>
      <p>
        Loading all high-severity interactions with adderall...
      </p>
      <div
        class="spinner-border"
        role="status"
      >
        <span
          class="sr-only"
        >
          Loading...
        </span>
      </div>
    </div>
    <p>
      sorry, no results were found
    </p>
  </div>
</DocumentFragment>
`;
